// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaxSelection correctly applies the theme context className to tag variant 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <MaxSelection
    value="3"
  >
    <div
      className="max-selection orion-fusion-theme"
    >
      <FormattedMessage
        id="Terra.form.select.maxSelectionOption"
        values={
          Object {
            "text": "3",
          }
        }
      >
        Terra.form.select.maxSelectionOption
      </FormattedMessage>
    </div>
  </MaxSelection>
</ThemeContextProvider>
`;

exports[`MaxSelection should render a default MaxSelection 1`] = `
<div
  className="max-selection"
>
  <MemoizedFormattedMessage
    id="Terra.form.select.maxSelectionOption"
    values={
      Object {
        "text": "3",
      }
    }
  />
</div>
`;
